--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-cssmin": "^0.1.7",
     "gulp-htmlmin": "^1.1.4",
+    "gulp-image": "^1.3.0",
     "gulp-jshint": "^1.9.2",
     "gulp-less": "^3.0.1",
     "gulp-plumber": "^1.0.1",
